# korgi

./: Cargo.toml  Cross.toml  DEVELOPMENT.md  README.md  install.sh  shimmering-enchanting-ritchie-agent-a58ee286b6c41a998.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  COMPARISON.md  DECISIONS.md  DEPENDENCIES.md  EDGE-CASES.md  FUTURE.md  PLAN.md
src/: lib.rs  main.rs
src/cli/: mod.rs  output.rs
src/commands/: check.rs  deploy.rs  destroy.rs  exec.rs  init.rs  logs.rs  mod.rs  rollback.rs  scale.rs  status.rs  sync_config.rs  traefik.rs
src/config/: interpolate.rs  merge.rs  mod.rs  types.rs
src/docker/: containers.rs  host.rs  labels.rs  mock.rs  mod.rs  registry.rs  traits.rs
src/health/: checker.rs  mod.rs
src/orchestrator/: deploy.rs  mod.rs  placement.rs  rollback.rs  scale.rs  state.rs  traefik_config.rs
src/ssh/: mod.rs  pool.rs  session.rs
tests/integration/: Dockerfile.host  docker-compose.yml  entrypoint.sh  korgi.toml  run_tests.sh  setup.sh  teardown.sh
wiki/: CLI-Reference.md  Configuration-Reference.md  Cross-Host-Load-Balancing.md  Deployment-Pipeline.md  Getting-Started.md  Health-Checks.md  Home.md  Installation.md  SSH-Authentication.md  Secrets-Management.md  Troubleshooting.md  _Sidebar.md
