[package]
name = "korgi"
version = "0.2.0"
edition = "2024"
description = "Docker orchestration across multiple hosts via SSH with Traefik load balancing"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Config
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# SSH
russh = "0.48"
russh-keys = "0.48"

# Docker
bollard = { version = "0.20", features = ["ssh"] }

# Errors
thiserror = "2"
anyhow = "1"

# Output
tabled = "0.17"
indicatif = "0.17"
console = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
futures = "0.3"
ssh-key = "0.6"
async-trait = "0.1"

[profile.release]
opt-level = "z"     # optimize for size
lto = true          # link-time optimization
codegen-units = 1   # single codegen unit for better optimization
panic = "abort"     # smaller than unwinding
strip = true        # strip debug symbols

[dev-dependencies]
tempfile = "3.27.0"
